# augurymorlet

./: Cargo.toml  README.md
docs/: 01-installation.md  02-colormap-themes.md  03-morlet-cwt.md  04-lomb-scargle.md
docs/history/: conversation-summary.md
src/: lib.rs
